--- a/StaticContentCaching/StaticContentCaching/Web.config
+++ b/StaticContentCaching/StaticContentCaching/Web.config
@@ -50,7 +50,7 @@
   </system.codedom>
   <system.webServer>
     <staticContent>
-      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00"/>
+      <clientCache cacheControlMode="UseExpires" httpExpires="Tue, 19 Jan 2038 03:14:07 GMT" />
     </staticContent>
   </system.webServer>
 </configuration>
