--- a/StaticContentCaching/StaticContentCaching/Web.config
+++ b/StaticContentCaching/StaticContentCaching/Web.config
@@ -50,7 +50,7 @@
   </system.codedom>
   <system.webServer>
     <staticContent>
-      <clientCache cacheControlMode="UseExpires" httpExpires="Tue, 19 Jan 2038 03:14:07 GMT" />
+      <clientCache cacheControlCustom="public,max-age=86400,must-revalidate" />
     </staticContent>
   </system.webServer>
 </configuration>
